# ui-cre

./: .env.example  .gitignore  .serverlessignore  AGENTS.md  AWS_SETUP.md  README.md  audit.md  bun.lockb  contacts-migration.sql  data-pipeline-plan.md  drizzle.config.ts  edge-cases.md  full-etl-pipeline-plan-high-level.md  full-etl-pipeline-plan.md  gemini-link-pipeline-plan.md  geocode-listings.mjs  instrumentation.ts  linkedin-connections-mock.csv  middleware.ts  mvp-data-pipeline-plan.md  next.config.mjs  package-lock.json  package.json  people-migration.sql  read-listings.mjs  serverless.yml  supabase-migration.sql  test-email-filter.mjs  test-supabase.mjs  tsconfig.json  vercel.json  vitest.config.ts  vitest.integration.config.ts
dagster/: .env.example  Dockerfile  Dockerfile.base  dagster_cloud.yaml  pyproject.toml  requirements.txt
dagster/.github/workflows/: dagster-cloud-deploy.yml
dagster/scripts/: backfill_address_street.py
dagster/tests/: test_cleaned_listings_utils.py
dagster/zillow_pipeline/: __init__.py  schedules.py
dagster/zillow_pipeline/assets/: cleaned_building_units.py  cleaned_listings.py  zillow_building_scrape.py  zillow_scrape.py  zip_codes.py
dagster/zillow_pipeline/resources/: apify.py  supabase.py
pipeline/dagster/: .env.example  .gitignore  Dockerfile  dagster_cloud_pre_install.sh  pyproject.toml  requirements.txt  seed_geometry.py  test_om_download.py
pipeline/dagster/scripts/: backfill_address_street.py  backfill_loopnet_address_fields.py  backfill_loopnet_geom.py  backfill_loopnet_om_url.py  download_crexi_historical_oms.py
pipeline/dagster/tests/: test_apify_resource.py  test_assets.py  test_backfill_crexi_run_lineage_job.py  test_cleaned_building_units_utils.py  test_cleaned_listings_utils.py  test_cleaned_loopnet_listings.py  test_convert_om_to_text.py  test_crexi_cap_rate.py  test_crexi_historical_om.py  test_crexi_run_lineage_backfill.py  (+13 more)
(+770 files in other folders)
