[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zillow-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-cloud",
    "supabase",
    "apify-client",
    "python-dotenv",
    "postal",
    "pytest",
    "python-dateutil>=2.9.0.post0",
    "boto3",
    "requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

